force-app/main/default/objects/Partner_Resource_Request__c/Partner_Resource_Request__c.object-meta.xml
<CustomObject>
    <description>Used for requesting internal resources necessary to support successful partnerships.</description>
    <label>Partner Resource Request</label>
    <nameField>
        <label>Partner Resource Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Resource Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>