force-app/main/default/objects/Partner_Resource_Request__c/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <description>Actual Cost to complete project.</description>
    <inlineHelpText>Actual Cost to complete project.</inlineHelpText>
    <label>Actual Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>