force-app/main/default/objects/Partner_Resource_Request__c/fields/Audience_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Audience_Segmentation__c</fullName>
    <description>If any audience segmentation is necessary please indicate here.</description>
    <inlineHelpText>If any audience segmentation is necessary please indicate here.</inlineHelpText>
    <label>Audience Segmentation</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>