force-app/main/default/objects/Partner_Resource_Request__c/fields/Co_Branding__c.field-meta.xml
<CustomField>
    <fullName>Co_Branding__c</fullName>
    <description>Will marketing Materials be co-branded?</description>
    <inlineHelpText>Will marketing Materials be co-branded?</inlineHelpText>
    <label>Co-Branding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>