force-app/main/default/objects/Partner_Resource_Request__c/fields/Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date__c</fullName>
    <description>Date request is completed and delivered.</description>
    <inlineHelpText>Date request is completed and delivered.</inlineHelpText>
    <label>Completion Date</label>
    <type>Date</type>
</CustomField>