force-app/main/default/objects/Partner_Resource_Request__c/fields/Development_Needed__c.field-meta.xml
<CustomField>
    <fullName>Development_Needed__c</fullName>
    <description>Is any development needed for this project? Salesforce, Paradigm, Landing pages, Custom sites, etc.</description>
    <inlineHelpText>Is any development needed for this project? Salesforce, Paradigm, Landing pages, Custom sites, etc.</inlineHelpText>
    <label>Development Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>