force-app/main/default/objects/Partner_Resource_Request__c/fields/Development_Notes__c.field-meta.xml
<CustomField>
    <fullName>Development_Notes__c</fullName>
    <description>Please detail any development needed here. If complex documentation can be attached.</description>
    <inlineHelpText>Please detail any development needed here. If complex documentation can be attached.</inlineHelpText>
    <label>Development Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>