force-app/main/default/objects/Partner_Resource_Request__c/fields/Estimated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost__c</fullName>
    <description>Estimated Cost from project owner.</description>
    <inlineHelpText>Estimated Cost from project owner.</inlineHelpText>
    <label>Estimated Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>