force-app/main/default/objects/Partner_Resource_Request__c/fields/External_Compliance_Approval_Needed__c.field-meta.xml
<CustomField>
    <fullName>External_Compliance_Approval_Needed__c</fullName>
    <description>Will Partner&apos;s Compliance Team need to review and approve this project before launch?</description>
    <inlineHelpText>Will Partner&apos;s Compliance Team need to review and approve this project before launch?</inlineHelpText>
    <label>External Compliance Approval Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>