force-app/main/default/objects/Partner_Resource_Request__c/fields/Key_Messages__c.field-meta.xml
<CustomField>
    <fullName>Key_Messages__c</fullName>
    <description>Key messages to be communicated for this project (pain points, how our solution solves, etc).</description>
    <inlineHelpText>Key messages to be communicated for this project (pain points, how our solution solves, etc).</inlineHelpText>
    <label>Key Messages</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>