force-app/main/default/objects/Partner_Resource_Request__c/fields/Marketing_Channels__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Channels__c</fullName>
    <description>What channels would ideally be utilized for this initiative?</description>
    <inlineHelpText>What channels would ideally be utilized for this initiative?</inlineHelpText>
    <label>Marketing Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Existing Communication Channels</fullName>
            </value>
            <value>
                <fullName>Downloadable PDFs</fullName>
            </value>
            <value>
                <fullName>Landing page / microsite</fullName>
            </value>
            <value>
                <fullName>Tools</fullName>
            </value>
            <value>
                <fullName>Videos</fullName>
            </value>
            <value>
                <fullName>Webinars</fullName>
            </value>
            <value>
                <fullName>Direct mail</fullName>
            </value>
            <value>
                <fullName>Desk drops</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>