force-app/main/default/objects/Partner_Resource_Request__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner Account</description>
    <inlineHelpText>Partner Account</inlineHelpText>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Resource Requests</relationshipLabel>
    <relationshipName>Partner_Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>