force-app/main/default/objects/Partner_Resource_Request__c/fields/Partner_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Status__c</fullName>
    <description>Status of Partner at time of Resource Request</description>
    <inlineHelpText>Status of Partner at time of Resource Request</inlineHelpText>
    <label>Partner Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Status</valueSetName>
    </valueSet>
</CustomField>