force-app/main/default/objects/Partner_Resource_Request__c/fields/Partnership_Type__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Type__c</fullName>
    <formula>TEXT(Partner_Account__r.Partnership_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partnership Type</label>
    <type>Text</type>
</CustomField>