force-app/main/default/objects/Partner_Resource_Request__c/fields/Primary_Project_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Project_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary contact for this project on the partner&apos;s side.</description>
    <inlineHelpText>Primary contact for this project on the partner&apos;s side.</inlineHelpText>
    <label>Primary Project Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Partner Resource Requests</relationshipLabel>
    <relationshipName>Partner_Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>