force-app/main/default/objects/Partner_Resource_Request__c/fields/Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget__c</fullName>
    <description>Budget allocated for this project. If applicable.</description>
    <inlineHelpText>Budget allocated for this project. If applicable.</inlineHelpText>
    <label>Project Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>