force-app/main/default/objects/Partner_Resource_Request__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <description>Describe project in detail. If more space is needed attachments can be used.</description>
    <inlineHelpText>Describe project in detail. If more space is needed attachments can be used.</inlineHelpText>
    <label>Project Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>