force-app/main/default/objects/Partner_Resource_Request__c/fields/Project_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Due_Date__c</fullName>
    <description>Date that resource will be needed to be complete by.</description>
    <inlineHelpText>Date that resource will be needed to be complete by.</inlineHelpText>
    <label>Project Due Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>