force-app/main/default/objects/Partner_Resource_Request__c/fields/Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>Project_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the team or individual who will own this request? Please choose from Salesforce Users.</description>
    <inlineHelpText>Who is the team or individual who will own this request? Please choose from Salesforce Users.</inlineHelpText>
    <label>Project Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Resource_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>