force-app/main/default/objects/Partner_Resource_Request__c/fields/Project_Payment__c.field-meta.xml
<CustomField>
    <fullName>Project_Payment__c</fullName>
    <description>Who is paying for this projects execution?</description>
    <inlineHelpText>Who is paying for this projects execution?</inlineHelpText>
    <label>Project Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ubiquity</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Combined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>