force-app/main/default/objects/Partner_Resource_Request__c/fields/Project_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Request_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date request was made.</description>
    <inlineHelpText>Date request was made.</inlineHelpText>
    <label>Project Request Date</label>
    <type>Date</type>
</CustomField>