force-app/main/default/objects/Partner_Resource_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Type of request being made</description>
    <inlineHelpText>Type of request being made</inlineHelpText>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Custom Prospect Presentation Material</fullName>
            </value>
            <value>
                <fullName>Training Materials Internal</fullName>
            </value>
            <value>
                <fullName>Training Materials External</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>New Product/Pricing Creation</fullName>
            </value>
            <value>
                <fullName>Sales Workflow</fullName>
            </value>
            <value>
                <fullName>Salesforce Customization</fullName>
            </value>
            <value>
                <fullName>Report/Dashboard Creation</fullName>
            </value>
            <value>
                <fullName>Landing Page</fullName>
            </value>
            <value>
                <fullName>Email Campaign</fullName>
            </value>
            <value>
                <fullName>Custom Website Build</fullName>
            </value>
            <value>
                <fullName>Video Creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>