force-app/main/default/objects/Partner_Resource_Request__c/fields/Target_Audience__c.field-meta.xml
<CustomField>
    <fullName>Target_Audience__c</fullName>
    <description>Who is target Audience for this marketing project?</description>
    <inlineHelpText>Who is target Audience for this marketing project?</inlineHelpText>
    <label>Target Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>End Client</fullName>
            </value>
            <value>
                <fullName>Partner Sales Team</fullName>
            </value>
            <value>
                <fullName>General Agents</fullName>
            </value>
            <value>
                <fullName>Wholesalers</fullName>
            </value>
            <value>
                <fullName>Advisors</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>