force-app/main/default/objects/Partner_Resource_Request__c/recordTypes/BI_PI_Request.recordType-meta.xml
<RecordType>
    <fullName>BI_PI_Request</fullName>
    <active>true</active>
    <description>Requests made for Business Intelligence or Product Innovation</description>
    <label>BI/PI Request</label>
</RecordType>