force-app/main/default/objects/Partner_Resource_Request__c/recordTypes/Marketing_Request.recordType-meta.xml
<RecordType>
    <fullName>Marketing_Request</fullName>
    <active>true</active>
    <description>Marketing request for partner resourcing.</description>
    <label>Marketing Request</label>
</RecordType>